# bedrock

./: .gitignore  CMakeLists.txt  README.md  bedrock.c  bedrock_settings.c  build.sh  drops.c  main.c  settings.c  x.h
